--- a/.github/workflows/terraform-docs.yaml
+++ b/.github/workflows/terraform-docs.yaml
@@ -33,11 +33,11 @@ jobs:
         with:
           working-dir: .
           git-push: true
-          config-file: terraform-workflows/terraform/.github/.terraform-docs.yaml
+          config-file: terraform-workflows/.github/.terraform-docs.yaml
 
       - name: Render and Push terraform docs for examples
         uses: terraform-docs/gh-actions@main
         with:
           working-dir: ./examples
           git-push: true
-          config-file: terraform-workflows/terraform/.github/.terraform-docs-example.yaml
+          config-file: terraform-workflows/.github/.terraform-docs-example.yaml
