--- a/.github/workflows/terraform-docs.yaml
+++ b/.github/workflows/terraform-docs.yaml
@@ -15,7 +15,7 @@ jobs:
   generateDocs:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout terraform-aws-ecs repository
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           ref: ${{ inputs.ref }}
@@ -25,6 +25,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: nimisha-gj/terraform-workflows
+          path: terraform-workflows
           token: ${{ secrets.GH_TOKEN }}
 
       - name: Render and Push terraform docs for main and modules
@@ -40,6 +41,3 @@ jobs:
           working-dir: ./examples
           git-push: true
           config-file: terraform-workflows/.github/.terraform-docs-example.yaml
-
-      - name: Clean up temporary files
-        run: rm -rf terraform-workflows
