--- a/.github/workflows/terraform-checks.yaml
+++ b/.github/workflows/terraform-checks.yaml
@@ -77,12 +77,25 @@ jobs:
         with:
           ref: ${{ inputs.ref }}
           token: ${{ secrets.GH_TOKEN }}
+      
+      - name: Checkout terraform-workflows repository for config files
+        uses: actions/checkout@v4
+        with:
+          repository: nimisha-gj/terraform-workflows
+          path: terraform-workflows
+          token: ${{ secrets.GH_TOKEN }}
 
       - name: Terraform min/max versions
         id: minMax
         uses: clowdhaus/terraform-min-max@v1.3.0
         with:
           directory: ${{ matrix.directory }}
+
+      - name: print ls
+        run: |
+          echo "Directory: ${{ matrix.directory }}"
+          && ls
+          && pwd
 
       - name: Pre-commit Terraform ${{ steps.minMax.outputs.minVersion }}
         # Run only validate pre-commit check on min version supported
@@ -100,7 +113,7 @@ jobs:
         with:
           terraform-version: ${{ steps.minMax.outputs.minVersion }}
           tflint-version: ${{ env.TFLINT_VERSION }}
-          args: 'terraform_validate --color=always --show-diff-on-failure --files $(ls *.tf)'
+          args: 'terraform_validate --color=always --show-diff-on-failure --files $(ls *.tf)  --config terraform-workflows/.github/.pre-commit-config.yaml'
 
   preCommitMaxVersion:
     name: Max TF pre-commit
@@ -121,6 +134,13 @@ jobs:
           ref: ${{ inputs.ref }}
           token: ${{ secrets.GH_TOKEN }}
 
+      - name: Checkout terraform-workflows repository for config files
+        uses: actions/checkout@v4
+        with:
+          repository: nimisha-gj/terraform-workflows
+          path: terraform-workflows
+          token: ${{ secrets.GH_TOKEN }}
+
       - name: Terraform min/max versions
         id: minMax
         uses: clowdhaus/terraform-min-max@v1.3.0
@@ -132,3 +152,4 @@ jobs:
           tflint-version: ${{ env.TFLINT_VERSION }}
           terraform-docs-version: ${{ env.TERRAFORM_DOCS_VERSION }}
           install-hcledit: true
+          args: 'terraform_validate --color=always --show-diff-on-failure --files $(ls *.tf)  --config terraform-workflows/.github/.pre-commit-config.yaml'
