--- a/.github/workflows/terraform-checks.yaml
+++ b/.github/workflows/terraform-checks.yaml
@@ -98,6 +98,13 @@ jobs:
       - name: print pwd
         run: |
           pwd
+          
+          
+      - name: print lsa
+        run: |
+          ls -la /home/runner/work
+          ls -la /home/runner/work/terraform-workflows/terraform-workflows
+          ls -la /home/runner/work/TESTING/TESTING
 
       - name: Pre-commit Terraform ${{ steps.minMax.outputs.minVersion }}
         # Run only validate pre-commit check on min version supported
