--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,6 +37,7 @@ jobs:
             conventional-changelog-conventionalcommits@4.6.3
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          branches: main
 
       - name: Do something when a new release published
         if: steps.semantic.outputs.new_release_published == 'true'
