--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,9 +35,9 @@ jobs:
             @semantic-release/changelog@6.0.0
             @semantic-release/git@10.0.0
             conventional-changelog-conventionalcommits@4.6.3
+          branches: '[{"name": "main"}]'
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          branches: main
 
       - name: Do something when a new release published
         if: steps.semantic.outputs.new_release_published == 'true'
