--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,6 +38,7 @@ jobs:
           branches: '[{"name": "main"}]'
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          BRANCHES: '["main"]'
 
       - name: Do something when a new release published
         if: steps.semantic.outputs.new_release_published == 'true'
