--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -20,19 +20,19 @@ jobs:
     secrets:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
-  generateDocs:
-    name: Generate Terraform Docs
+  release:
+    name: Module Release
     needs: preCommitCheck
-    uses: nimisha-gj/terraform-workflows/.github/workflows/terraform-docs.yaml@main
+    uses: nimisha-gj/terraform-workflows/.github/workflows/release.yaml@main
     with:
       ref: ${{ inputs.ref }}
     secrets:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
-    
-  release:
-    name: Module Release
-    needs: generateDocs
-    uses: nimisha-gj/terraform-workflows/.github/workflows/release.yaml@main
+
+  generateDocs:
+    name: Generate Terraform Docs
+    needs: release
+    uses: nimisha-gj/terraform-workflows/.github/workflows/terraform-docs.yaml@main
     with:
       ref: ${{ inputs.ref }}
     secrets:
