--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,11 +25,19 @@ jobs:
         with:
           ref: ${{ inputs.ref }}
           token: ${{ secrets.GH_TOKEN }}
+      
+      - name: ls
+        run: ls -la
+      - name: pwd
+        run: pwd
+      - name: asdf
+        run: cd .. && ls -la
 
       - name: Release
         uses: cycjimmy/semantic-release-action@v2
         with:
           semantic_version: 18.0.0
+          working_directory: .
           extra_plugins: |
             @semantic-release/changelog@6.0.0
             @semantic-release/git@10.0.0
