--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -20,20 +20,24 @@ jobs:
     secrets:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
-  release:
-    name: Module Release
+  generateDocs:
+    name: Generate Terraform Docs
     needs: preCommitCheck
-    uses: nimisha-gj/terraform-workflows/.github/workflows/release.yaml@main
+    uses: nimisha-gj/terraform-workflows/.github/workflows/terraform-docs.yaml@main
     with:
       ref: ${{ inputs.ref }}
     secrets:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
+    outputs:
+      latest_ref:
+        description: 'The latest commit ref after generating docs'
+        value: ${{ steps.get_latest_ref.outputs.latest_ref }}
 
-  generateDocs:
-    name: Generate Terraform Docs
-    needs: release
-    uses: nimisha-gj/terraform-workflows/.github/workflows/terraform-docs.yaml@main
+  release:
+    name: Module Release
+    needs: generateDocs
+    uses: nimisha-gj/terraform-workflows/.github/workflows/release.yaml@main
     with:
-      ref: ${{ inputs.ref }}
+      ref: ${{ needs.generateDocs.outputs.latest_ref }}
     secrets:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
