--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -28,16 +28,12 @@ jobs:
       ref: ${{ inputs.ref }}
     secrets:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
-    outputs:
-      latest_ref:
-        description: 'The latest commit ref after generating docs'
-        value: ${{ steps.get_latest_ref.outputs.latest_ref }}
 
   release:
     name: Module Release
     needs: generateDocs
     uses: nimisha-gj/terraform-workflows/.github/workflows/release.yaml@main
     with:
-      ref: ${{ needs.generateDocs.outputs.latest_ref }}
+      ref: ${{ inputs.ref }}
     secrets:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
